[gd_scene load_steps=7 format=2]

[ext_resource path="res://shop_drop_box/img/Piknik basket.png" type="Texture" id=1]
[ext_resource path="res://shop_drop_box/shop_drop_box.gd" type="Script" id=2]
[ext_resource path="res://inventory/inventory.tscn" type="PackedScene" id=3]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 2.0
height = 10.0

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 8, 6.5 )

[node name="shop_drop_box" type="Node2D"]
script = ExtResource( 2 )

[node name="animated_sprite" type="AnimatedSprite" parent="."]
unique_name_in_owner = true
position = Vector2( 0, -5 )
frames = SubResource( 1 )

[node name="static_body_2d" type="StaticBody2D" parent="."]
unique_name_in_owner = true
collision_layer = 0

[node name="collision_shape_2d" type="CollisionShape2D" parent="static_body_2d"]
position = Vector2( 0, -1 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="player_area_mask" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 4
collision_mask = 2

[node name="collision_shape_2d" type="CollisionShape2D" parent="player_area_mask"]
position = Vector2( 0, -5.5 )
shape = SubResource( 3 )

[node name="inventory" parent="." instance=ExtResource( 3 )]
unique_name_in_owner = true
item_dict = {
Resource( "res://item/instance/medium_energy_potion.tres" ): 5
}

[node name="5_z_index" type="Node2D" parent="."]
z_index = 5

[node name="conversation" type="Label" parent="5_z_index"]
unique_name_in_owner = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -29.0
margin_right = 20.0
margin_bottom = -11.0
grow_horizontal = 2
grow_vertical = 2
align = 1
valign = 1

[connection signal="area_entered" from="player_area_mask" to="." method="_on_player_area_mask_area_entered"]
[connection signal="area_exited" from="player_area_mask" to="." method="_on_player_area_mask_area_exited"]
[connection signal="input_event" from="player_area_mask" to="." method="_on_player_area_mask_input_event"]
[connection signal="mouse_entered" from="player_area_mask" to="." method="_on_player_area_mask_mouse_entered"]
[connection signal="mouse_exited" from="player_area_mask" to="." method="_on_player_area_mask_mouse_exited"]
